UI Design update

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
+                    android:background="@color/colorPrimary"
                     android:ems="10"
                     android:hapticFeedbackEnabled="false"
                     android:inputType="textPersonName"
