--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,19 +68,29 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:background="@android:color/darker_gray">
 
-            <TextView
-                android:id="@+id/lyrics_textview"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="583dp"
+                android:layout_height="wrap_content"
                 android:background="@android:color/darker_gray"
-                android:text="@string/lyrics"
-                android:textColor="#000000" />
-        </LinearLayout>
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/lyrics_textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/darker_gray"
+                    android:gravity="center|top"
+                    android:scrollbars="vertical"
+                    android:text="@string/type_in_an_artist_and_their_string_song"
+                    android:textColor="#000000"
+                    app:fontFamily="@font/basic" />
+            </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
